testdata/error/zero_cost.ledger
; Posting with zero cost.

2024/09/01 Shop
    Expenses                                     100 CHF @ 0 USD
    Assets:Banks
